src/emit/snapshots/hugr_llvm__emit__test__diverse_cfg_children@llvm14.snap
---
source: src/emit/test.rs
expression: module.to_string()
---
; ModuleID = 'test_context'
source_filename = "test_context"

define { i32, {}, {} } @_hl.main.1() {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  br label %2

0:                                                ; preds = %2
  %1 = extractvalue { {} } undef, 0
  br label %4

2:                                                ; preds = %entry_block
  %3 = call { i32, {}, {} } @_hl.scoped_func.7()
  switch i32 0, label %0 [
  ]

4:                                                ; preds = %0
  ret { i32, {}, {} } %3
}

define { i32, {}, {} } @_hl.scoped_func.7() {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  ret { i32, {}, {} } { i32 0, {} undef, {} poison }
}
