src/emit/snapshots/hugr_llvm__emit__test__emit_hugr_conditional@llvm14.snap
---
source: src/emit/test.rs
expression: module.to_string()
---
; ModuleID = 'test_context'
source_filename = "test_context"

define { { { { {}, {} } }, { { i32, {} } }, { { i32 } } }, { i32, {} } } @_hl.main.1({ { { i32 } }, { { i32, {} } }, { { {}, {} } } } %0, { i32, {} } %1) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %2 = extractvalue { { { i32 } }, { { i32, {} } }, { { {}, {} } } } %0, 0
  %3 = extractvalue { { i32 } } %2, 0
  %4 = extractvalue { { { i32 } }, { { i32, {} } }, { { {}, {} } } } %0, 1
  %5 = extractvalue { { i32, {} } } %4, 0
  %6 = extractvalue { { { i32 } }, { { i32, {} } }, { { {}, {} } } } %0, 2
  %7 = extractvalue { { {}, {} } } %6, 0
  switch i32 0, label %cond_4_case_0 [
    i32 1, label %cond_4_case_1
    i32 2, label %cond_4_case_2
  ]

cond_4_case_0:                                    ; preds = %entry_block
  %8 = insertvalue { { i32 } } undef, { i32 } %3, 0
  %9 = insertvalue { { { {}, {} } }, { { i32, {} } }, { { i32 } } } poison, { { i32 } } %8, 2
  br label %cond_exit_4

cond_4_case_1:                                    ; preds = %entry_block
  %10 = insertvalue { { i32, {} } } undef, { i32, {} } %5, 0
  %11 = insertvalue { { { {}, {} } }, { { i32, {} } }, { { i32 } } } poison, { { i32, {} } } %10, 1
  br label %cond_exit_4

cond_4_case_2:                                    ; preds = %entry_block
  %12 = insertvalue { { {}, {} } } undef, { {}, {} } %7, 0
  %13 = insertvalue { { { {}, {} } }, { { i32, {} } }, { { i32 } } } poison, { { {}, {} } } %12, 0
  br label %cond_exit_4

cond_exit_4:                                      ; preds = %cond_4_case_2, %cond_4_case_1, %cond_4_case_0
  %"03.0" = phi { { { {}, {} } }, { { i32, {} } }, { { i32 } } } [ %9, %cond_4_case_0 ], [ %13, %cond_4_case_2 ], [ %11, %cond_4_case_1 ]
  %mrv = insertvalue { { { { {}, {} } }, { { i32, {} } }, { { i32 } } }, { i32, {} } } undef, { { { {}, {} } }, { { i32, {} } }, { { i32 } } } %"03.0", 0
  %mrv32 = insertvalue { { { { {}, {} } }, { { i32, {} } }, { { i32 } } }, { i32, {} } } %mrv, { i32, {} } %1, 1
  ret { { { { {}, {} } }, { { i32, {} } }, { { i32 } } }, { i32, {} } } %mrv32
}
