src/emit/snapshots/hugr_llvm__emit__test__emit_hugr_make_tuple@llvm14.snap
---
source: src/emit/test.rs
expression: module.to_string()
---
; ModuleID = 'test_context'
source_filename = "test_context"

define { i32, { { {}, {} }, { {}, {} } } } @_hl.main.1({ {}, {} } %0, { {}, {} } %1) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %2 = insertvalue { { {}, {} }, { {}, {} } } undef, { {}, {} } %0, 0
  %3 = insertvalue { { {}, {} }, { {}, {} } } %2, { {}, {} } %1, 1
  %4 = insertvalue { i32, { { {}, {} }, { {}, {} } } } { i32 0, { { {}, {} }, { {}, {} } } poison }, { { {}, {} }, { {}, {} } } %3, 1
  ret { i32, { { {}, {} }, { {}, {} } } } %4
}
