src/emit/snapshots/hugr_llvm__emit__test__emit_hugr_make_tuple@pre-mem2reg@llvm14.snap
---
source: src/emit/test.rs
expression: module.to_string()
---
; ModuleID = 'test_context'
source_filename = "test_context"

define { i32, { { {}, {} }, { {}, {} } } } @_hl.main.1({ {}, {} } %0, { {}, {} } %1) {
alloca_block:
  %"0" = alloca { i32, { { {}, {} }, { {}, {} } } }, align 8
  %"2_0" = alloca { {}, {} }, align 8
  %"2_1" = alloca { {}, {} }, align 8
  %"4_0" = alloca { i32, { { {}, {} }, { {}, {} } } }, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store { {}, {} } %0, { {}, {} }* %"2_0", align 1
  store { {}, {} } %1, { {}, {} }* %"2_1", align 1
  %"2_01" = load { {}, {} }, { {}, {} }* %"2_0", align 1
  %"2_12" = load { {}, {} }, { {}, {} }* %"2_1", align 1
  %2 = insertvalue { { {}, {} }, { {}, {} } } undef, { {}, {} } %"2_01", 0
  %3 = insertvalue { { {}, {} }, { {}, {} } } %2, { {}, {} } %"2_12", 1
  %4 = insertvalue { i32, { { {}, {} }, { {}, {} } } } { i32 0, { { {}, {} }, { {}, {} } } poison }, { { {}, {} }, { {}, {} } } %3, 1
  store { i32, { { {}, {} }, { {}, {} } } } %4, { i32, { { {}, {} }, { {}, {} } } }* %"4_0", align 4
  %"4_03" = load { i32, { { {}, {} }, { {}, {} } } }, { i32, { { {}, {} }, { {}, {} } } }* %"4_0", align 4
  store { i32, { { {}, {} }, { {}, {} } } } %"4_03", { i32, { { {}, {} }, { {}, {} } } }* %"0", align 4
  %"04" = load { i32, { { {}, {} }, { {}, {} } } }, { i32, { { {}, {} }, { {}, {} } } }* %"0", align 4
  ret { i32, { { {}, {} }, { {}, {} } } } %"04"
}
