src/emit/snapshots/hugr_llvm__emit__test__emit_hugr_tag@pre-mem2reg@llvm14.snap
---
source: src/emit/test.rs
expression: module.to_string()
---
; ModuleID = 'test_context'
source_filename = "test_context"

define { {}, {}, {} } @_hl.main.1() {
alloca_block:
  %"0" = alloca { {}, {}, {} }, align 8
  %"4_0" = alloca { {}, {}, {} }, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store { {}, {}, {} } { {} poison, {} undef, {} poison }, { {}, {}, {} }* %"4_0", align 1
  %"4_01" = load { {}, {}, {} }, { {}, {}, {} }* %"4_0", align 1
  store { {}, {}, {} } %"4_01", { {}, {}, {} }* %"0", align 1
  %"02" = load { {}, {}, {} }, { {}, {}, {} }* %"0", align 1
  ret { {}, {}, {} } %"02"
}
