src/emit/snapshots/hugr_llvm__emit__test__emit_hugr_unpack_tuple@llvm14.snap
---
source: src/emit/test.rs
expression: module.to_string()
---
; ModuleID = 'test_context'
source_filename = "test_context"

define { { {}, {} }, { {}, {} } } @_hl.main.1({ i32, { { {}, {} }, { {}, {} } } } %0) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %1 = extractvalue { i32, { { {}, {} }, { {}, {} } } } %0, 1
  %2 = extractvalue { { {}, {} }, { {}, {} } } %1, 0
  %3 = extractvalue { { {}, {} }, { {}, {} } } %1, 1
  %mrv = insertvalue { { {}, {} }, { {}, {} } } undef, { {}, {} } %2, 0
  %mrv6 = insertvalue { { {}, {} }, { {}, {} } } %mrv, { {}, {} } %3, 1
  ret { { {}, {} }, { {}, {} } } %mrv6
}
