src/emit/snapshots/hugr_llvm__emit__test__emit_hugr_unpack_tuple@pre-mem2reg@llvm14.snap
---
source: src/emit/test.rs
expression: module.to_string()
---
; ModuleID = 'test_context'
source_filename = "test_context"

define { { {}, {} }, { {}, {} } } @_hl.main.1({ i32, { { {}, {} }, { {}, {} } } } %0) {
alloca_block:
  %"0" = alloca { {}, {} }, align 8
  %"1" = alloca { {}, {} }, align 8
  %"2_0" = alloca { i32, { { {}, {} }, { {}, {} } } }, align 8
  %"4_0" = alloca { {}, {} }, align 8
  %"4_1" = alloca { {}, {} }, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store { i32, { { {}, {} }, { {}, {} } } } %0, { i32, { { {}, {} }, { {}, {} } } }* %"2_0", align 4
  %"2_01" = load { i32, { { {}, {} }, { {}, {} } } }, { i32, { { {}, {} }, { {}, {} } } }* %"2_0", align 4
  %1 = extractvalue { i32, { { {}, {} }, { {}, {} } } } %"2_01", 1
  %2 = extractvalue { { {}, {} }, { {}, {} } } %1, 0
  %3 = extractvalue { { {}, {} }, { {}, {} } } %1, 1
  store { {}, {} } %2, { {}, {} }* %"4_0", align 1
  store { {}, {} } %3, { {}, {} }* %"4_1", align 1
  %"4_02" = load { {}, {} }, { {}, {} }* %"4_0", align 1
  %"4_13" = load { {}, {} }, { {}, {} }* %"4_1", align 1
  store { {}, {} } %"4_02", { {}, {} }* %"0", align 1
  store { {}, {} } %"4_13", { {}, {} }* %"1", align 1
  %"04" = load { {}, {} }, { {}, {} }* %"0", align 1
  %"15" = load { {}, {} }, { {}, {} }* %"1", align 1
  %mrv = insertvalue { { {}, {} }, { {}, {} } } undef, { {}, {} } %"04", 0
  %mrv6 = insertvalue { { {}, {} }, { {}, {} } } %mrv, { {}, {} } %"15", 1
  ret { { {}, {} }, { {}, {} } } %mrv6
}
